--- a/frontend/BTS/src/Home/index.scss
+++ b/frontend/BTS/src/Home/index.scss
@@ -1,125 +1,118 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap');
-*{
-  font-family: 'Poppins', sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap");
+* {
+  font-family: "Poppins", sans-serif;
 }
-.container{
-    color: aliceblue;
-    background-color: rgb(216, 220, 215);
-    width: 100%;
-    min-height: 110vh;
-    margin: auto;
-    display:flex;
+.container {
+  color: aliceblue;
+  background-color: rgb(216, 220, 215);
+  width: 100%;
+  min-height: 110vh;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.box {
+  width: 340px;
+  height: 670px;
+  background-color: #fcfcff;
+  border-radius: 12px;
+
+  .welcome {
+    color: black;
+    text-align: center;
+    font-size: 20px;
+    margin: 6%;
+    background-color: #49e42d;
+    border-radius: 20px;
+    padding: 5px;
+  }
+
+  .gif {
+    margin-top: 8%;
+    display: flex;
     align-items: center;
     justify-content: center;
-    
-}
+    img {
+      width: 150px;
+      height: auto;
+    }
+  }
 
-.box{
-    width: 340px;
-    height: 650px;
-    background-color: #fcfcff;
-    border-radius: 12px;
+  .login {
+    margin: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(255, 255, 255);
+    padding: 12px;
+    border-radius: 8px;
 
-    .welcome{
-        color: black;
-        text-align: center;
-        font-size: 30px;
-        margin: 6%;
-        background-color: #d0d9d1;
-        border-radius: 20px;
-        padding: 5px;
+    .input {
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-top: 7%;
+      width: 260px;
+    }
+    .input input {
+      height: 100%;
+      font-size: 15px;
+      padding: 9px;
+      width: 100%;
+      background: transparent;
+      border: 1.5px solid rgba(85, 82, 82, 0.2);
+      outline: none;
+      border-radius: 12px;
     }
 
-    .gif {
-        margin-top: 8%;
-        display:flex;
-        align-items: center;
-        justify-content: center;
-        img {
-          width: 150px; 
-          height: auto; 
-         
-        }
-      }
+    .input box-icon {
+      position: absolute;
+      right: 2%;
+    }
+    .btn {
+      padding: 9px;
+      width: 140px;
+      background-color: #49e42d;
+      border: 1.5px solid #49e42d;
+      color: #fcfcff;
+      font-weight: bolder;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+  }
 
-      .login{
-        margin: 10px;
-        display:flex;
-        align-items: center;
-        justify-content: center;
-        background-color: rgb(255, 255, 255);
-        padding: 12px;
-        border-radius: 8px;
+  .google {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    .g-btn {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 50%;
+      border: none;
+      padding: 5px;
+      background-color: #ffffff;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);
+      cursor: pointer;
+    }
+  }
+  .sign-up {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(255, 255, 255);
+    color: black;
 
-        .input{
-          position: relative;
-          display:flex;
-          align-items: center;
-          justify-content: center;
-          margin-top: 7%;
-          width: 260px;
-          
-        }
-        .input input{
-          
-          height: 100%;
-          font-size: 15px;
-          padding: 9px;
-          width: 100%;
-          background: transparent;
-          border: 1.5px solid rgba(85, 82, 82, 0.2);
-          outline: none;
-          border-radius: 12px;
-        }
-
-        .input box-icon{
-          position: absolute;
-          right: 2%;
-          
-          
-        }
-        .btn{
-          padding: 9px;
-          width: 140px;
-          background-color: #49e42d;
-          border: 1.5px solid rgb(91, 241, 32);
-          color: #fcfcff;
-          font-weight: bolder;
-          border-radius: 5px;
-          cursor: pointer;
-        }
-        
-      }
-
-      .google{
-          display:flex;
-          align-items: center;
-          justify-content: center;
-          .g-btn{
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            border-radius: 50%;
-            border: none;
-            padding: 5px; 
-            background-color: #ffffff; 
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.6); 
-            cursor: pointer; 
-          }
-      }
-      .sign-up
-      { display: flex;
-        align-items: center;
-        justify-content: center;
-        background-color:rgb(255, 255, 255);
-        color:  black;
-
-      .link{
-        justify-content: center;
-        display: flex;
-        align-items: center;
-        color: rgb(0, 72, 241);
-        cursor: pointer;
-      }
-      }
+    .link {
+      justify-content: center;
+      display: flex;
+      align-items: center;
+      color: rgb(0, 72, 241);
+      cursor: pointer;
+    }
+  }
 }
