--- a/frontend/BTS/src/Home/index.scss
+++ b/frontend/BTS/src/Home/index.scss
@@ -85,6 +85,8 @@
   }
 
   .google {
+    font-size: smaller;
+    color: black;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -94,7 +96,7 @@
       justify-content: center;
       border-radius: 50%;
       border: none;
-      padding: 5px;
+      padding: 3px;
       background-color: #ffffff;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);
       cursor: pointer;
