--- a/frontend/BTS/src/Home/index.scss
+++ b/frontend/BTS/src/Home/index.scss
@@ -2,6 +2,11 @@
 *{
   font-family: 'Poppins', sans-serif;
 }
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
 .container{
     color: aliceblue;
     background-color: rgb(216, 220, 215);
