--- a/frontend/BTS/src/Home/index.scss
+++ b/frontend/BTS/src/Home/index.scss
@@ -2,20 +2,14 @@
 * {
   font-family: "Poppins", sans-serif;
 }
-<<<<<<< HEAD
+
 body {
   height: 100%;
   margin: 0;
   padding: 0;
 }
-.container{
-    color: aliceblue;
-    background-color: rgb(216, 220, 215);
-    width: 100%;
-    min-height: 110vh;
-    margin: auto;
-    display:flex;
-=======
+
+
 .container {
   color: aliceblue;
   background-color: rgb(216, 220, 215);
@@ -46,7 +40,6 @@ body {
   .gif {
     margin-top: 1%;
     display: flex;
->>>>>>> 89ef416b4bf39e0b520c1fa052efd360b634917f
     align-items: center;
     justify-content: center;
     img {
@@ -102,6 +95,7 @@ body {
   .google {
     font-size: smaller;
     color: black;
+    flex-direction: column;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -115,6 +109,7 @@ body {
       background-color: #ffffff;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);
       cursor: pointer;
+      margin-top:2%;
     }
   }
   .sign-up {
