--- a/frontend/BTS/src/Navbar/navbar.scss
+++ b/frontend/BTS/src/Navbar/navbar.scss
@@ -21,47 +21,46 @@
     align-items: center;
     justify-content: center;
     position: relative;
-    
 }
-
-.navigation{
-    border-radius: 12px;
+.xyz{
     position: absolute;
-    bottom: 0; /* Align to the bottom */
-    width: 100%; /* Make the navigation bar full width */
-    height: 60px;
+    bottom: 0;
+}
+.navigation{
+    width: 340px;
+    height: 70px;
     background: #3bab40;
+    position:relative ;
     display: flex;
     justify-content: center;
     align-items: center;
-
+    border-radius: 10px;
 }
 .navigation ul{
-    justify-content: space-around;
     display: flex;
-    gap: 10px;
     width: 100%;
     padding: 0; 
     margin: 0;
+    justify-content: space-around;
 }
 
 .navigation ul li{
     position: relative;
     list-style: none;
-    width: 100%;
+    width: 80px;
     height: 40px;
     z-index: 1;
 }
-
 .navigation ul li a{
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width: 100%;
     text-align: center;
     font-weight: 500;
+    
+    width: 100%;
 }
 
 .navigation ul li a .icon{
@@ -71,10 +70,10 @@
     font-size: 1.5em;
     text-align: center;
     transition: 0.5s;
-
 }
+
 .navigation ul li.active a .icon{
-    transform: translateY(-25px);
+    transform: translateY(-31px);
 }
 .navigation ul li a .text{
     position: absolute;
@@ -84,20 +83,59 @@
     transition: 0.6s;
     opacity: 0;
     transform: translateY(15px);
+    color: #000000;
+    
 }
 
 .navigation ul li.active a .text{
     opacity: 1;
-    transform: translateY(7px);
+    transform: translateY(13px);
 }
 
 .indicator{
     position: absolute;
-    bottom: 0;
+    top: -40%;
     width: 60px;
     height: 60px;
-    background: #fcfcff;
-    
-    transition: 0.5s
-    
+    background: #2e2edf;
+    transition: 0.5s;
+    left: 7%;
+    border-radius: 50%;
+    border: 4px solid #fff;
+    transition: 0.5s;
+}
+
+.indicator::before{
+    content: '';
+    position: absolute;
+    top: 39%;
+    left: -20px;
+    width: 20px;
+    height: 20px;
+    background: transparent;
+    border-top-right-radius: 20px;
+    box-shadow: 0px -10px 0 0 #ffffff;
+}
+.indicator::after{
+    content: '';
+    position: absolute;
+    top: 39%;
+    right: -20px;
+    width: 20px;
+    height: 20px;
+    background: transparent;
+    border-top-left-radius: 20px;
+    box-shadow: 0px -10px 0 0 #ffffff;
+}
+
+.navigation ul li:nth-child(1).active~ .indicator{
+    transform: translateX(calc(80px * 0));
+}
+
+.navigation ul li:nth-child(2).active~ .indicator{
+    transform: translateX(calc(112px * 1));
+}
+
+.navigation ul li:nth-child(3).active~ .indicator{
+    transform: translateX(calc(112px * 2));
 }
