--- a/frontend/BTS/src/Navbar/navbar.scss
+++ b/frontend/BTS/src/Navbar/navbar.scss
@@ -15,26 +15,25 @@
 .box1 {
     width: 340px;
     height: 670px;
-    background-color: #fcfcff;
+    background-color: #ffffff;
     border-radius: 12px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     position: relative;
 }
+
 .xyz{
     position: absolute;
     bottom: 0;
 }
 .navigation{
     width: 340px;
-    height: 70px;
+    height: 65px;
     background: #3bab40;
     position:relative ;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
 }
 .navigation ul{
     display: flex;
@@ -58,8 +57,7 @@
     align-items: center;
     flex-direction: column;
     text-align: center;
-    font-weight: 500;
-    
+    font-weight: 500; 
     width: 100%;
 }
 
@@ -70,10 +68,12 @@
     font-size: 1.5em;
     text-align: center;
     transition: 0.5s;
+    color: #ffffff;
 }
 
 .navigation ul li.active a .icon{
-    transform: translateY(-31px);
+    transform: translateY(-15px);
+    color: #000000;
 }
 .navigation ul li a .text{
     position: absolute;
@@ -94,13 +94,13 @@
 
 .indicator{
     position: absolute;
-    top: -40%;
-    width: 60px;
-    height: 60px;
-    background: #2e2edf;
+    top: 0%;
+    width: 70px;
+    height: 57px;
+    background: #ffffff;
     transition: 0.5s;
-    left: 7%;
-    border-radius: 50%;
+    left: 6%;
+   
     border: 4px solid #fff;
     transition: 0.5s;
 }
@@ -108,24 +108,24 @@
 .indicator::before{
     content: '';
     position: absolute;
-    top: 39%;
-    left: -20px;
-    width: 20px;
-    height: 20px;
+    top: -7%;
+    left: -13px;
+    width: 10px;
+    height: 30px;
     background: transparent;
-    border-top-right-radius: 20px;
-    box-shadow: 0px -10px 0 0 #ffffff;
+    border-top-right-radius: 90px;
+    box-shadow: 0px -7px 0 0 #ffffff;
 }
 .indicator::after{
     content: '';
     position: absolute;
-    top: 39%;
-    right: -20px;
-    width: 20px;
-    height: 20px;
+    top: -7%;
+    right: -13px;
+    width: 10px;
+    height: 30px;
     background: transparent;
-    border-top-left-radius: 20px;
-    box-shadow: 0px -10px 0 0 #ffffff;
+    border-top-left-radius: 90px;
+    box-shadow: 0px -7px 0 0 #ffffff;
 }
 
 .navigation ul li:nth-child(1).active~ .indicator{
